--- a/blog/src/index.css
+++ b/blog/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lilita+One&family=Poppins:wght@100;200;300;400;500;700&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lilita+One&family=Poppins:wght@100;200;300;400;500;700&family=Shadows+Into+Light&family=Sriracha&display=swap');
 
 body {
   background-color: #231942;
